--- a/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
@@ -10,6 +10,8 @@
 <link rel="stylesheet" href="{{ "css/font-awesome.min.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.carousel.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.theme.css" | absURL }}">
+<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.1/default/snipcart.css" />
+
 <!-- Theme stylesheet, if possible do not edit this stylesheet -->
 {{ with .Site.Params.style }}
   <link href="{{ printf "css/style.%s.css" . | absURL }}" rel="stylesheet" id="theme-stylesheet">
