--- a/themes/hugo-creative-portfolio-theme/layouts/partials/header.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/header.html
@@ -1,8 +1,8 @@
-<div class="header__cart">
+<div hidden id="snipcart" data-api-key="NjM0YmQ0MTYtZGU3NC00ZDM4LThhOTYtYjFkNmFhNzcxZmNiNjM2OTkzOTk5MzkzNDQ0MzY5"></div>
+
     <a href="#" class="snipcart-checkout" style="text-decoration: none;">
       <div class="snipcart-summary">
-        <img src="/images/icons/cart.svg" alt="">
+        <img src="/img/cart.svg" alt="">
         <span class="snipcart-total-price"></span>
       </div>
     </a>
-  </div>
