--- a/themes/hugo-creative-portfolio-theme/layouts/partials/header.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/header.html
@@ -1,8 +1,9 @@
 <div hidden id="snipcart" data-api-key="NjM0YmQ0MTYtZGU3NC00ZDM4LThhOTYtYjFkNmFhNzcxZmNiNjM2OTkzOTk5MzkzNDQ0MzY5"></div>
-
-    <a href="#" class="snipcart-checkout" style="text-decoration: none;">
+  
+    <a href="#" class="snipcart-checkout cartlogo" style="text-decoration: none;">
+      <img id="cartsvg" src="/img/cart.svg" alt="cart">
       <div class="snipcart-summary">
-        <img src="/img/cart.svg" alt="">
         <span class="snipcart-total-price"></span>
+        
       </div>
     </a>
