--- a/themes/hugo-creative-portfolio-theme/layouts/partials/header.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div hidden id="snipcart" data-api-key="NjM0YmQ0MTYtZGU3NC00ZDM4LThhOTYtYjFkNmFhNzcxZmNiNjM2OTkzOTk5MzkzNDQ0MzY5"></div>
   
     <a href="#" class="snipcart-checkout cartlogo" style="text-decoration: none;">
-      <img id="cartsvg" src="img/cart.svg" alt="cart">
+      <img id="cartsvg" src="/img/cart.svg" alt="cart">
       <div class="snipcart-summary">
         <span class="snipcart-total-price"></span>
         
