--- a/themes/hugo-creative-portfolio-theme/layouts/partials/carousel.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/carousel.html
@@ -7,7 +7,7 @@
                 {{ range sort .Site.Data.carousel "weight" }}
                     {{ if not (.project | eq .Params.project) }}
                     <div class="item">
-                        <img class="img-responsive" src="{{ .image }}" alt="">
+                        <img class="img-responsive" src="{{ .image }}" alt="{{.Params.project}}">
                     </div>
                     {{ end }}
                 {{ end }}
