--- a/themes/hugo-creative-portfolio-theme/layouts/partials/carousel.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/carousel.html
@@ -1,4 +1,5 @@
 {{ $CurrentProject := .Params.project }}
+{{ $url := .Site.BaseURL}}
 {{ if isset .Site.Params "carousel" }}
 {{ if .Site.Params.carousel.enable }}
 {{ if gt (len .Site.Data.carousel) 0 }}
@@ -8,7 +9,7 @@
                 {{ range sort .Site.Data.carousel "weight" }}
                     {{ if (.project | eq $CurrentProject) }}
                     <div class="item">
-                        <img class="img-responsive" src="{{.image }}" alt="{{.project}}#{{$CurrentProject}}">
+                        <img class="img-responsive" src="{{$url}}/{{.image}}" alt="{{.project}}#{{$CurrentProject}}#{{$url}}">
                     </div>
                     {{ end }}
                 {{ end }}
