--- a/themes/hugo-creative-portfolio-theme/layouts/partials/carousel.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/carousel.html
@@ -1,4 +1,5 @@
 {{ $CurrentProject := .Params.project }}
+{{ $summary := .Params.summary }}
 {{ $url := .Site.BaseURL}}
 {{ if isset .Site.Params "carousel" }}
 {{ if .Site.Params.carousel.enable }}
@@ -9,7 +10,7 @@
                 {{ range sort .Site.Data.carousel "weight" }}
                     {{ if (.project | eq $CurrentProject) }}
                     <div class="item">
-                        <img class="img-responsive" src="{{$url}}/{{.image}}" alt="{{.project}}#{{$CurrentProject}}#{{$url}}">
+                        <img class="img-responsive" src="{{$url}}/{{.image}}" alt="{{$summary}}#{{$CurrentProject}}">
                     </div>
                     {{ end }}
                 {{ end }}
