--- a/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
@@ -10,7 +10,7 @@
 <script src="{{ "js/front.js" | absURL }}"></script>
 <script src="https://cdn.snipcart.com/themes/v3.0.2/default/snipcart.js"></script>
 
-
+{{ with .Site.GetPage "/about" }}
 <script>
   $(document).ready(function(){
     $('#typewriteText').typewrite({
@@ -63,6 +63,7 @@
     });
   });
   </script>
+{{end}}
 
 {{ if .Site.Params.analytics.matomo }}
   {{ partial "_analytics/matomo.html" . }}
