--- a/themes/hugo-creative-portfolio-theme/layouts/partials/carousel.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/carousel.html
@@ -5,24 +5,21 @@
 
 {{ $summary := .Params.summary }}
 {{ $url := .Site.BaseURL}}
+
 {{ if isset .Site.Params "carousel" }}
 {{ if .Site.Params.carousel.enable }}
-{{ if gt (len .Site.Data.carousel) 0 }}
 <section>
         <div class="container">
             <div class="owl-carousel">
-                {{ range sort .Site.Data.carousel "weight" }}
-                    {{ if (.project | eq .Scratch.Get "CurrentProject") }}
+                {{ range .Params "carousel-img" }}
                     <div class="item">
-                        <img class="img-responsive" src="{{$url}}/{{.image}}" alt="{{$summary}} #{{$CurrentProject}}">
+                        <img class="img-responsive" src="{{$url}}/{{.Content}}" alt="{{$summary}} #{{$CurrentProject}}">
                     </div>
-                    {{ end }}
                 {{ end }}
 
             </div>
         </div>
    
 </section>
-{{ end }}
 {{ end }}
 {{ end }}
