--- a/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
@@ -8,8 +8,8 @@
 <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,300,700,400italic">
 <link rel="stylesheet" href="{{ "css/font-awesome.min.css" | absURL }}">
-<link rel="stylesheet" href="{{ "css/owl.carousel.css" | absURL }}">
-<link rel="stylesheet" href="{{ "css/owl.theme.css" | absURL }}">
+<link rel="stylesheet" href="{{ "css/owl.carousel.min.css" | absURL }}">
+<link rel="stylesheet" href="{{ "css/owl.theme.default.min.css" | absURL }}">
 <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.2/default/snipcart.css"/>
 
 <!-- Theme stylesheet, if possible do not edit this stylesheet -->
