--- a/themes/hugo-creative-portfolio-theme/static/css/custom.css
+++ b/themes/hugo-creative-portfolio-theme/static/css/custom.css
@@ -1,5 +1,26 @@
 /* your styles go here */
 
+.owl-prev {
+    width: 15px;
+    height: 100px;
+    position: absolute;
+    top: 40%;
+    margin-left: -20px;
+    display: block !important;
+    border:0px solid black;
+}
+
+.owl-next {
+    width: 15px;
+    height: 100px;
+    position: absolute;
+    top: 40%;
+    right: -25px;
+    display: block !important;
+    border:0px solid black;
+}
+.owl-prev i, .owl-next i {transform : scale(1,6); color: #ccc;}
+
 #cartsvg {
     width: 2vw;
     height: auto;
