--- a/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/scripts.html
@@ -8,6 +8,7 @@
 <script src="{{ "js/owl.carousel.min.js" | absURL }}"></script>
 <script src="{{ "js/front.js" | absURL }}"></script>
 <script src="https://cdn.snipcart.com/themes/v3.0.2/default/snipcart.js"></script>
+<div id="snipcart" data-api-key="NjM0YmQ0MTYtZGU3NC00ZDM4LThhOTYtYjFkNmFhNzcxZmNiNjM2OTkzOTk5MzkzNDQ0MzY5" hidden></div>
 
 {{ if .Site.Params.analytics.matomo }}
   {{ partial "_analytics/matomo.html" . }}
