--- a/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/_default/single.html
@@ -25,6 +25,7 @@
                   data-item-name="{{ .name }}"
                   data-item-price="{{ .price }}"
                   data-item-url="{{ .product_url }}"
+                  data-item-image="{{ .image }}"
                   data-item-description="{{ .description }}">
                   Add to cart
                   </button>
