--- a/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
@@ -6,11 +6,13 @@
 <meta name="robots" content="all,follow">
 <meta name="googlebot" content="index,follow,snippet,archive">
 <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}">
-<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,300,700,400italic">
+<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat&display=swap">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt:200&display=swap&subset=thai">
+
 <link rel="stylesheet" href="{{ "css/font-awesome.min.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.carousel.min.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.theme.default.min.css" | absURL }}">
-<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.2/default/snipcart.css"/>
+<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.3/default/snipcart.css"/>
 
 
 <!-- Theme stylesheet, if possible do not edit this stylesheet -->
