--- a/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
+++ b/themes/hugo-creative-portfolio-theme/layouts/partials/head.html
@@ -7,7 +7,7 @@
 <meta name="googlebot" content="index,follow,snippet,archive">
 <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Montserrat&display=swap">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt:200&display=swap&subset=thai">
+<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Prompt:200&display=swap&subset=thai">
 
 <link rel="stylesheet" href="{{ "css/font-awesome.min.css" | absURL }}">
 <link rel="stylesheet" href="{{ "css/owl.carousel.min.css" | absURL }}">
@@ -39,8 +39,6 @@
 <link href="{{ .OutputFormats.Get "RSS" }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 <link href="{{ .OutputFormats.Get "RSS" }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
-
-
 
 {{ template "_internal/google_analytics_async.html" . }}
 
